Updated default route

--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,3 +1,4 @@
 isics_flat_page_show:
     pattern:      /{url}
     defaults:     { _controller: IsicsFlatPageBundle:Main:show }
+    requirements: { url: .* }
